--- a/punt_eltete/views/product_template.xml
+++ b/punt_eltete/views/product_template.xml
@@ -11,26 +11,56 @@
                     <page name="variants" string="El Tete">
                     
                         <group>
-                            <field name="attribute_id"/>
-                            <field name="referencia_cliente_id"/>
-                            <field name="referencia_id"/>
+                            <field name="attribute_id" readonly="1"/>
+                            <field name="referencia_cliente_id" readonly="1"/>
+                            <field name="referencia_id" readonly="1"/>
                         </group>
                         
                         
+                        <div attrs="{'invisible': [('referencia_id', '!=', False)]}">
+                            <br/><br/><h3>Referencia</h3>
+                        </div>
+                        <group attrs="{'invisible': [('referencia_id', '!=', False)]}">
+                            <field name="is_cantonera" invisible="1"/>
+                            <field name="is_perfilu" invisible="1"/>
+                            <field name="is_slipsheet" invisible="1"/>
+                            <field name="is_solidboard" invisible="1"/>
+                            <field name="is_formato" invisible="1"/>
+                            <field name="is_bobina" invisible="1"/>
+                            <field name="is_pieballet" invisible="1"/>
+                            <field name="is_varios" invisible="1"/>
+                            
+                            <field name='pie'  attrs="{'invisible': [('is_pieballet', '=', False)]}"/>
+                            <field name='ala_1' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
+                            <field name='ancho' attrs="{'invisible': ['|',('is_cantonera', '=', True),('is_pieballet', '=', True),]}"/>
+                            <field name='ala_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),('is_slipsheet', '=', False),]}"/>
+                            <field name='grosor_2' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}" />
+                            <field name='ala_3' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
+                            <field name='longitud' attrs="{'invisible': [('is_bobina', '=', True)]}"/>
+                            <field name='grosor_1' attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),]}" />
+                            <field name='ala_4' attrs="{'invisible': [('is_slipsheet', '=', False)]}"/>
+                            <field name='diametro'  attrs="{'invisible': [('is_bobina', '=', False)]}"/>
+                            <field name='gramaje' attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>
+                        </group>
+                        
+                        <group attrs="{'invisible': [('referencia_id', '!=', False)]}">
+                            <button name="create_product_referencia" type="object" string="Crear / buscar referencia" />
+                        </group>
+                        
                         <br/><br/><h3>Campos atributo</h3>
                         <group>
-                            <field name="cantonera_color_id"/>
-                            <field name="cantonera_forma_id"/>
-                            <field name="cantonera_especial_id"/>
-                            <field name="cantonera_impresion_id"/>
-                            <field name="perfilu_color_id"/>
-                            <field name="inglete_id"/>
-                            <field name="inglete_num"/>
-                            <field name="plancha_color_id"/>
-                            <field name="papel_calidad_id"/>
-                            <field name="troquelado_id"/>
-                            <field name="fsc_id"/>
-                            <field name="reciclable_id"/>
+                            <field name='cantonera_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                            <field name='cantonera_forma_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                            <field name='cantonera_especial_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                            <field name='cantonera_impresion_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False)]}"/>
+                            <field name='perfilu_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_perfilu', '=', False)]}"/>
+                            <field name='plancha_color_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_solidboard', '=', False)]}"/>
+                            <field name='papel_calidad_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_formato', '=', False),('is_bobina', '=', False),]}"/>
+                            <field name='troquelado_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_slipsheet', '=', False),('is_solidboard', '=', False),('is_formato', '=', False),]}"/>
+                            <field name='inglete_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
+                            <field name='inglete_num' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),]}"/>
+                            <field name='fsc_id' options="{'no_create': True, 'no_create_edit':True}"/>
+                            <field name='reciclable_id' options="{'no_create': True, 'no_create_edit':True}"/>
 							<field name="cantonera_1"/>
 							<field name="cantonera_2"/>
 							<field name="cantonera_3"/>
