--- a/punt_eltete/views/res_partner.xml
+++ b/punt_eltete/views/res_partner.xml
@@ -24,20 +24,23 @@
                     <field name="country_id"/>
                 </group>
                 
-                <group colspan="2" >
-                    <field name="line_ids" context="{'default_wizard_id': active_id, 'default_state_id': state_id, 'default_country_id': country_id, }">
-                        <tree string="Líneas" editable="top">
-                            <field name='partner_id' invisible="1"/>
-                            <field name='wizard_id' invisible="1"/>
-                            <field name='state_id' invisible="1"/>
-                            <field name='country_id' invisible="1" />
-                            <field name='referencia_cliente_id' domain="[('partner_id', '=', partner_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
-                            <field name='attribute_id' domain="[('referencia_cliente_id', '=', referencia_cliente_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
-                            <field name='num_pallets' sum="Pallets"/>
-                            <field name='oferta_id' domain="[('attribute_id', '=', attribute_id), ('state_id', '=', state_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
-                        </tree>
-                    </field>   
-                </group>
+
+                <field name="line_ids" context="{'default_wizard_id': active_id, 'default_state_id': state_id, 'default_country_id': country_id, }">
+                    <tree string="Líneas" editable="top">
+                        <field name='partner_id' invisible="1"/>
+                        <field name='wizard_id' invisible="1"/>
+                        <field name='state_id' invisible="1"/>
+                        <field name='country_id' invisible="1" />
+                        <field name="type_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}" />
+                        <field name="product_id" domain="[('categ_id','=',type_id), ('virtual_available', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" />
+                        <field name="lot_ids" domain="[('product_id','=',product_id), ('product_qty', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" widget="many2many_tags" />
+                        <field name='referencia_cliente_id' domain="[('partner_id', '=', partner_id), ('type_id','=',type_id)]" options="{'no_create': True, 'no_create_edit':True}" />
+                        <field name='attribute_id' domain="[('referencia_cliente_id', '=', referencia_cliente_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
+                        <field name='num_pallets' sum="Pallets"/>
+                        <field name='oferta_id' domain="[('attribute_id', '=', attribute_id), ('state_id', '=', state_id)]" options="{'no_create': True, 'no_create_edit':True}"/>
+                    </tree>
+                </field>   
+
                 
                 <footer>
                     <button name="create_sale_order" type="object"
