--- a/punt_eltete/views/product_template.xml
+++ b/punt_eltete/views/product_template.xml
@@ -113,8 +113,11 @@
             <tree string="Producto">
                 <field name="name"/>
                 <field name="ancho_interior"/>
-				<field name="ancho_superficie"/>
-				<field name="comentario"/>
+		<field name="ancho_superficie"/>
+		<field name="comentario"/>
+		<field name="j_interior"/>
+		<field name="j_superficie"/>
+		<field name="j_superficie_max"/>
             </tree>
         </field>
     </record>
